# rust_webserver

./: Cargo.toml  README.md  Webserver Documentation.md
.cargo/: config.toml
.github/workflows/: main.yml
architecture/: Component Overview.uxf  communication protocol.md  module description.md  notes.md
config/: config.json
error_logs/: error_FileLoaderPlugin_2025-06-20_21-58-59.json  error_FileLoaderPlugin_2025-06-21_00-22-28.json
plugins/email_subscribe_plugin/: email_subscribe_plugin  pluginConfig.json
plugins/file_loader/: pluginConfig.json
src/: file_watcher.rs  lib.rs  macros.rs  main.rs  webserver.rs
src/config/: config.rs  mod.rs
src/controlSystem/: control_system.rs  mod.rs  models.rs  utils.rs
src/control_system/: cli.rs  commands.rs  control_system.rs  mod.rs  models.rs
src/control_system/commands/: hello_command.rs  help_command.rs  list_plugins_command.rs  mod.rs  models.rs  reload_plugin_command.rs  start_plugin_command.rs  stop_plugin_command.rs
src/io/: data_storage.rs  in_memory_storage.rs  mod.rs
src/plugin/: interfaces.rs  manager.rs  mod.rs  models.rs  plugin_config.rs  plugin_entry.rs  plugin_manager.rs  running_plugin.rs  test_plugin.rs
src/plugin/handlers/: mod.rs  package_handlers.rs  plugin_communicator.rs  plugin_handler.rs
src/plugin_communication/: PluginCommunicator.rs  mod.rs  models.rs  package_handler.rs  plugin_communicator.rs  protocol.rs  std_io_json_protocol.rs
src/plugin_communication/app_starter/: mod.rs  (+7 more)
src/plugin_old/: interfaces.rs  manager.rs  mod.rs  models.rs
src/webserver/: cert_manager.rs  http_1_server.rs  https_1_server.rs  mod.rs  utils.rs  webserver.rs
tests/: app_starter_tests.rs  https_wildcard_test.rs  plugin_manager_test.rs  system_test.rs  test_utils.rs
website/: flutter_bootstrap.js  index.html  main.dart.js  manifest.json  version.json
website/assets/: AssetManifest.bin.json  AssetManifest.json
websites/example1/: websiteConfiguration.json
(+9 files in other folders)
