[package]
name = "rust_webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.27.1", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1.0"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = "0.4"
thiserror = "2.0.12"
walkdir = "2.3"
log = "0.4"
env_logger = "0.11.8"
regex = "1.11.1"
base64 = "0.22"
paste = "1.0.15"
async-trait = "0.1.89"

[[bin]]
name = "test_dummy_app"
path = "src/bin/test_dummy_app.rs"

[dev-dependencies]
tempfile = "3.13"

