[package]
name = "rust_webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_webserver"
path = "src/lib.rs"

[dependencies]
strum = { version = "0.28.0", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
bytes = "1.0"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.8"
regex = "1.12.2"
base64 = "0.22"
paste = "1.0.15"
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.44"
notify = "7"

tokio-rustls = "0.25"
rustls = "0.23"
rustls-pemfile = "2.1"

[[bin]]
name = "test_dummy_app"
path = "src/bin/test_dummy_app.rs"

[[bin]]
name = "test_plugin"
path = "src/bin/test_plugin_bin.rs"

[dev-dependencies]
tempfile = "3.13"
rcgen = "0.12"
hyper-rustls = "0.26"
